@@ -1,5 +1,9 @@
 Fri Aug 21 11:57:57 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
 
+	* src/Options.cpp (operator): Added a new -V option, which just
+ 	  exits with a value of 0.  This is useful for checking if gperf
+ 	  exists in the search path.  We use the feature in TAO.
+
 	* src: Removed the globally overloaded new operator.  This was a
  	  portability pain and didn't really improve performance very
  	  much.
